--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     transition: all 3850ms;
-    background-image: url(/images/fondo.png);
+    background-image: url(images/fondo.png);
 }
 
 .caja {
