--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     width: 350px;
     height: 170px;
     position: absolute;
-    background-color: aquamarine;
+    background-image: url('images/fondo.png');
     
 }
 .puntero {
