--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,13 @@
     justify-content: center;
     align-items: center;
     transition: all 3850ms;
-    background-image: url('images/fondo.png');
+    background-image: url('images/fondo.png') !important;
 }
 
 .caja {
     width: 350px;
     height: 170px;
     position: absolute;
-    background-image: url('images/fondo.png');
     
 }
 .puntero {
