--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-image: url('images/fondo.png') !important;
+}
+
 .centrar {
     position: fixed;
     width: 100vw;
@@ -11,7 +16,6 @@
     justify-content: center;
     align-items: center;
     transition: all 3850ms;
-    background-image: url('images/fondo.png') !important;
 }
 
 .caja {
