--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,7 @@
     justify-content: center;
     align-items: center;
     transition: all 3850ms;
-    background-image: url('/images/fondo.png');
-}
-
-.back-box {
-    width: 100%;   
+    background-image: url('../images/fondo.png');
 }
 
 .caja {
